kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  namespace: default
spec:
  selector:
    matchLabels:
      app: "sample-app"
  template:
    metadata:
      labels:
        app: "sample-app"
    spec:
      nodeSelector:
        role: workers
